[gd_scene load_steps=28 format=2]

[ext_resource path="res://actors/Player.gd" type="Script" id=1]
[ext_resource path="res://art/items/jetpack_item.png" type="Texture" id=2]
[ext_resource path="res://art/Adventurer/Poses/adventurer_idle.png" type="Texture" id=3]
[ext_resource path="res://art/Adventurer/Poses/adventurer_hurt.png" type="Texture" id=4]
[ext_resource path="res://art/Adventurer/Poses/adventurer_walk1.png" type="Texture" id=5]
[ext_resource path="res://art/Adventurer/Poses/adventurer_walk2.png" type="Texture" id=6]
[ext_resource path="res://art/Adventurer/Poses/adventurer_swim1.png" type="Texture" id=7]
[ext_resource path="res://art/Adventurer/Poses/adventurer_swim2.png" type="Texture" id=8]
[ext_resource path="res://art/Adventurer/Poses/adventurer_jump.png" type="Texture" id=9]
[ext_resource path="res://art/Adventurer/Poses/adventurer_duck.png" type="Texture" id=10]
[ext_resource path="res://art/Adventurer/Poses/adventurer_fall.png" type="Texture" id=11]
[ext_resource path="res://sound/splash.wav" type="AudioStream" id=12]
[ext_resource path="res://objects/HUDCanvasLayer.tscn" type="PackedScene" id=13]
[ext_resource path="res://art/hud/title_GameOver.png" type="Texture" id=14]
[ext_resource path="res://art/fx/player_light_transparent_inverse.png" type="Texture" id=15]
[ext_resource path="res://art/fx/fire_01.png" type="Texture" id=16]
[ext_resource path="res://art/items/item_toolPickaxe.png" type="Texture" id=17]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "swim",
"speed": 3.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "duck",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 25.4142, 45.7339 )

[sub_resource type="Animation" id=3]

resource_name = "FadeIn"
length = 0.6
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("FadeCanvasLayer/BackdropColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=4]

resource_name = "FadeOut"
length = 0.6
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("FadeCanvasLayer/BackdropColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=5]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GameOverCanvasLayer/BackdropColorRect:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("FadeCanvasLayer/BackdropColorRect:color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=6]

length = 1.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.364627 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.364627 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.364627 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]

length = 4.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("GameOverCanvasLayer/BackdropColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GameOverCanvasLayer/BackdropColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.588235 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GameOverCanvasLayer/BackdropColorRect/TextureRect:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.863281, 0.118027, 0.118027, 0 ), Color( 0.863281, 0.118027, 0.118027, 0 ), Color( 0.863281, 0.118027, 0.118027, 1 ) ]
}

[sub_resource type="Animation" id=8]

length = 1.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -9 ), Vector2( -44, 27 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -90.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ "hurt", "hurt", "idle" ]
}

[sub_resource type="Animation" id=9]

resource_name = "_SETUP"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("TorchLight2D:texture_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2.0 ]
}

[sub_resource type="Animation" id=10]

resource_name = "flicker"
length = 1.5
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("TorchLight2D:texture_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.41, 0.44, 0.47, 0.82, 0.85, 0.87, 1.02, 1.03, 1.05, 1.3, 1.32, 1.34, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 2.0, 2.0, 2.1, 2.0, 2.0, 2.1, 2.0, 2.0, 1.9, 2.0, 2.0, 2.1, 2.0, 2.0 ]
}

[node name="Player" type="KinematicBody2D" index="0" groups=[
"player",
"moves_bushes",
]]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.001
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "collision" ]

[node name="JetpackSprite" type="Sprite" parent="." index="0"]

position = Vector2( -16, 4.36938 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="1"]

position = Vector2( 0, -9 )
frames = SubResource( 1 )
animation = "idle"
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]

shape = SubResource( 2 )

[node name="SplashPosition2D" type="Position2D" parent="." index="3"]

position = Vector2( 2, 41 )

[node name="SplashAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." index="4"]

stream = ExtResource( 12 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="HUDCanvasLayer" parent="." index="5" instance=ExtResource( 13 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="6"]

root_node = NodePath("..")
autoplay = "_SETUP"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/FadeIn = SubResource( 3 )
anims/FadeOut = SubResource( 4 )
anims/_SETUP = SubResource( 5 )
anims/flash = SubResource( 6 )
anims/game_over = SubResource( 7 )
anims/pass_out = SubResource( 8 )
blend_times = [  ]

[node name="GameOverCanvasLayer" type="CanvasLayer" parent="." index="7"]

editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="BackdropColorRect" type="ColorRect" parent="GameOverCanvasLayer" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 0.588235 )
_sections_unfolded = [ "Anchor", "Margin", "Rect", "Visibility" ]

[node name="TextureRect" type="TextureRect" parent="GameOverCanvasLayer/BackdropColorRect" index="0"]

modulate = Color( 0.863281, 0.118027, 0.118027, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -212.5
margin_top = -26.5
margin_right = 212.5
margin_bottom = 26.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 14 )
stretch_mode = 0
_sections_unfolded = [ "Visibility" ]

[node name="FeetRays" type="Node2D" parent="." index="8"]

[node name="RayCast2D" type="RayCast2D" parent="FeetRays" index="0"]

position = Vector2( 0, 41 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 18 )
collision_mask = 4

[node name="RayCast2D2" type="RayCast2D" parent="FeetRays" index="1"]

position = Vector2( 24, 41 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 18 )
collision_mask = 4

[node name="RayCast2D4" type="RayCast2D" parent="FeetRays" index="2"]

position = Vector2( 12, 41 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 18 )
collision_mask = 4

[node name="RayCast2D3" type="RayCast2D" parent="FeetRays" index="3"]

position = Vector2( -24, 41 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 18 )
collision_mask = 4

[node name="RayCast2D5" type="RayCast2D" parent="FeetRays" index="4"]

position = Vector2( -13, 41 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 18 )
collision_mask = 4

[node name="ScreenFadeCanvasLayer" type="CanvasLayer" parent="." index="9"]

editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="BackdropColorRect" type="ColorRect" parent="ScreenFadeCanvasLayer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 0 )
_sections_unfolded = [ "Anchor", "Margin", "Rect", "Visibility" ]

[node name="FadeCanvasLayer" type="CanvasLayer" parent="." index="10"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="BackdropColorRect" type="ColorRect" parent="FadeCanvasLayer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 0 )
_sections_unfolded = [ "Anchor", "Margin", "Rect", "Visibility" ]

[node name="Torch" type="Node2D" parent="." index="11"]

[node name="TorchLight2D" type="Light2D" parent="Torch" index="0"]

enabled = true
editor_only = false
texture = ExtResource( 15 )
offset = Vector2( 0, 0 )
texture_scale = 2.0
color = Color( 1, 1, 1, 1 )
energy = 1.0
mode = 3
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 2
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 0.0
shadow_filter = 0
shadow_filter_smooth = 0.0
shadow_item_cull_mask = 1
_sections_unfolded = [ "Range" ]

[node name="TorchEffectLight2D" type="Light2D" parent="Torch" index="1"]

position = Vector2( -0.615559, 4.69363 )
enabled = true
editor_only = false
texture = ExtResource( 16 )
offset = Vector2( 0, 0 )
texture_scale = 2.0
color = Color( 1, 0.726563, 0, 1 )
energy = 0.5
mode = 0
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 0.0
shadow_filter = 0
shadow_filter_smooth = 0.0
shadow_item_cull_mask = 1

[node name="TorchAnimationPlayer" type="AnimationPlayer" parent="Torch" index="2"]

root_node = NodePath("..")
autoplay = "flicker"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/_SETUP = SubResource( 9 )
anims/flicker = SubResource( 10 )
blend_times = [  ]

[node name="Pickaxe" type="Node2D" parent="." index="12"]

_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="Pickaxe" index="0"]

position = Vector2( 45, 0 )
texture = ExtResource( 17 )
_sections_unfolded = [ "Transform" ]

[node name="Position2D" type="Position2D" parent="Pickaxe" index="1"]

position = Vector2( 69, -1 )


